--- a/.github/workflows/update_space.yml
+++ b/.github/workflows/update_space.yml
@@ -19,10 +19,12 @@ jobs:
         python-version: '3.9'
 
     - name: Install Gradio
-      run: python -m pip install gradio
+      run: |
+        python -m pip install --upgrade pip
+        pip install gradio huggingface_hub
 
-    - name: Log in to Hugging Face
-      run: python -c 'import huggingface_hub; huggingface_hub.login(token="${{ secrets.hf_token }}")'
+    - name: Login to Hugging Face
+      run: huggingface-cli login --token ${{ secrets.HF_TOKEN }}
 
     - name: Deploy to Spaces
       run: gradio deploy
